fixed alignments, changed sections to div

--- a/ohs-pelican-theme/static/less/index.less
+++ b/ohs-pelican-theme/static/less/index.less
@@ -1,5 +1,7 @@
 @import "vars";
 
+@section-height:850px;
+
 .index {
 
 	.content {
@@ -10,25 +12,22 @@
 	nav {
 		background-color: transparent;
 		position: fixed;
-		width: 100%;
+		margin-left: -480px;
+		width: 960px;
 		z-index: 1;
-		
+		left: 50%;
+
 		a {
 			color: #fff;
-		}
-		
-		.logo {
-			background: url('../img/logo_small_white.png') ;
-			background-repeat: no-repeat;
-			background-position: 18px 6px;
+			font-weight: 100;
 		}
 	}
 
-	section {
+	div {
 		&.intro {
 			background: url('../img/top.jpg');
 			background-size:100% 100%;
-			height: 800px;
+			height: @section-height;
 
 			.container{
 				width: 212px;
@@ -46,6 +45,7 @@
 		}
 
 		&.about{
+			height: @section-height;
 			background-color: #eee;
 			padding: @ws-unit*28;
 
@@ -66,7 +66,7 @@
 			background-size:100%;
 			background-repeat: no-repeat;
 
-			height: 800px;
+			height: @section-height;
 
 			h2 {
 				color: #fff;
@@ -86,7 +86,7 @@
 		&.contact{
 			
 			.container{
-
+				height: @section-height;
 				width: 620px;
 				margin: 244px auto;
 
@@ -116,27 +116,34 @@
 					}
 				}
 				
-				button {
+				.button-primary {
 					.opacity(1);
-					margin-left: 18px;
+					margin:5px 0 0 18px;
 					width: 140px;
-					height: 140px;
+					height: 40px;
+					padding: 100px 0 0 0;
 					background-color: #DCDCDC;
-					padding-top: 85px;
 					background-position: 50% 50%;
 					background-repeat: no-repeat;
-					
-					p {
+					font-family: @font-family-copy;
+					font-size: 14px;
+					display: inline-block;
+					text-align: center;
+					text-decoration: none;
+
+
+					span {
 						.opacity(0);
 						padding: 0;
 						color: #fff;
-						font-family: @font-family-copy
+					
 					}
 
 					&:hover{
 						background-color: #e6808e;
-						p {
+						span {
 							.opacity(1)
+					
 						}
 					}
 					
@@ -188,7 +195,7 @@
 
 	}
 
-	button {
+	.button-primary {
 		.opacity(.8);
 		.rounded(3px);
 		.transition();
